# 3osc

./: 3osc.c  3osc.h  CMakeLists.txt  LICENSE  Makefile  README.md  dsl.h  eval.c  ftable.c  ftable.h  main.c  math.txt
lang/: Makefile  main.d  parser.d  scanner.d
scanner/: README.md  lex.yy.c  tokens.y
